@@ -10,9 +10,10 @@ REST API
 --------
 
 * API version upgraded to 16
-* If an image can not be decoced, ../preview and ../rendered routes are now returning 
+* If an image can not be decoded, ../preview and ../rendered routes are now returning 
   unsupported.png only if the ?returnUnsupportedImage option is specified; otherwise, 
   it raises a 415 error code.
+* Archive jobs response now contains a header Content-Disposition:filename='archive.zip'
   
 
 
